# ChemPulse

./: .env.example  .gitignore  README.md  pyproject.toml
data_contracts/: chem.chemical_mdm.v1.json  chem.lab_results.v1.json  chem.material_movements.v1.json  chem.sensor_readings.v1.json
infra/: docker-compose.yml
src/chempulse_consumer/: consumer.py  routing.py  validation.py
src/chempulse_gen/: constants.py  generate_data.py  generators.py  utils.py  validator.py
src/chempulse_storage/: sql_server_writer.py  test_connection.py
src/chempulse_stream/: kafka_producer.py
tests/integration/: test_generate_data_pipeline.py
tests/unit/: test_consumer_logic.py  test_validator.py
